# Auto_Aim

./: CMakeLists.txt  LICENSE  main.cpp
CamDrv/: CamDrv.cpp  CamDrv.hpp
config/: camera.yaml  camera_param2.xml  camera_param5.xml
include/: Armor.h  Armor.hpp  LightBar.h  LightBar.hpp  PreProcess.h  PreProcess.hpp  Track.h  Track.hpp  config.h  coordinateTrans.hpp  data.hpp  serial.hpp  time_stamp.hpp  uart.hpp
src/: CamDrv.cpp  communication.cpp  coordinateTrans.cpp
